--- a/src/StabilometricApp/StabilometricApp.Android/Properties/AndroidManifest.xml
+++ b/src/StabilometricApp/StabilometricApp.Android/Properties/AndroidManifest.xml
@@ -3,5 +3,6 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<application android:label="Stabilometric Collector" android:icon="@mipmap/launcher_foreground"></application>
 </manifest>
