--- a/src/StabilometricApp/StabilometricApp/StabilometricApp.csproj
+++ b/src/StabilometricApp/StabilometricApp/StabilometricApp.csproj
@@ -43,5 +43,8 @@
     <EmbeddedResource Update="Views\RecordingPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SettingsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
